fix article
